    widgets then receive what gadgets returned (possibly engine default)
 - add  Spring.GetGlobalLos(allyTeamID) -> bool  to LuaSyncedRead
 - add  Spring.IsNoCostEnabled() -> bool  to LuaSyncedRead
 - add Spring.SetWind(number minStrength, number maxStrength)
 - add Spring.SetTidal(number strength)
 - add Spring.GetTidal
 - add Spring.{Unit,Feature}Rendering.SetProjectileLuaDraw
 - add Spring.GetLuaMemUsage to LuaUnsyncedRead
   returns the number of (kilo-)bytes used and (kilo-)allocations performed
   by the calling Lua state individually, as well as by all states globally
 - add Spring.GetVidMemUsage to LuaUnsyncedRead
 - add Spring.Ping callout and corresponding Pong callin
 - add Spring.GetMapStartPositions callout
 - add gl.GetViewRange callout
 - add DrawMaterial callin
 - add `VFS.GAME` as a synonym to `VFS.MOD`
 - support local-space tracking for dynamic lights added via Spring.Add{Map,Model}Light
   the light-definition table should contain a 'localSpace = true' entry to enable this
 - Add Spring.SetVideoCapturingTimeOffset() for > 30fps video capturing
 - default `defs.lua` now reads a new file, `defs_post.lua`, which
   currently filters out movedefs unused by any unitdef (previously
   this was done by the engine). You can prevent this filter by adding
   the `dont_remove` field to such movedefs. This is useful to make
   them available in `Spring.MoveCtrl.SetMoveDef` but beware the perf cost.
 - new TextEditing(utf8, start, length) callin, which holds the IME editing composition (https://wiki.libsdl.org/Tutorials/TextInput)
 - new SDLSetTextInputRect(x, y, w, h), SDLStartTextInput() and SDLStopTextInput() functions for controlling IME input from Lua
 - Add AllowUnitTransport callin. Called when the engine tests whether unit A can transport unit B. Returning true will let
   the engine decide, returning false will force the engine to disallow transportation (for this specific call).